unpackaged/objects/USSI_Student__c.object
<CustomObject>
    <fields>
        <fullName>USSI_Degree_Program__c</fullName>
        <label>Degree Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>USSI_Expected_Graduation__c</fullName>
        <label>Expected Graduation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USSI_First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Full_Name__c</fullName>
        <formula>USSI_First_Name__c + &apos; &apos; +  USSI_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>USSI_Preferred_Contact__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USSI_TimeStamp__c</fullName>
        <description>If this field is updated, send an email to the student</description>
        <inlineHelpText>When is the last verification email sent</inlineHelpText>
        <label>Last Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>USSI_University__c</fullName>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Verification_Code__c</fullName>
        <label>Verification Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student Intern</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>USSI_Full_Name__c</columns>
        <columns>USSI_Email_Address__c</columns>
        <columns>USSI_Verification_Code__c</columns>
        <columns>USSI_TimeStamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STU-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Interns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>